kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mini-java-app
  labels:
    name: mini-java-app
    app: mini-java-app
